Adicionando gerador de versões para o simulado (ainda incompleto)

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/gerarVersoes" method="post">
-        <input type="text" name="id" placeholder="ID questionário"><br>
+    <form action="/simulado" method="post">
+        <input type="text" name="id_simulado" placeholder="ID simulado"><br>
         <input type="text" name="quantidade" placeholder="Quantidade"><br>
         <input type="submit" value="LET'S GO!">
     </form>
